# picogui

./: RELEASE-NOTES-0.46
apps/working/gridgame/: Makefile.am  Makefile.in  checkers.th  overflow.th
apps/working/gridgame/.svn/: dir-wcprops  entries
apps/working/tpcal/: Makefile.am  Makefile.in  calth.th
apps/working/tpcal/.svn/: dir-wcprops  entries
server/: Makefile  Makefile.in  PicoGUIServer.mdl  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.in  pgmain.c  profile.user.old
server/.deps/: pgmain.Po
server/.svn/: dir-props  dir-wcprops  entries
server/.svn/wcprops/: AUTHORS.svn-work  COPYING.svn-work  ChangeLog.svn-work  INSTALL.svn-work  Makefile.am.svn-work  NEWS.svn-work  PicoGUIServer.mdl.svn-work  README.configfile.svn-work  README.opengl.svn-work  README.psion5mx.svn-work  README.skins.svn-work  README.svn-work  README.vr3.svn-work  SConscript.svn-work  TODO.DirectFB.svn-work  acconfig.h.svn-work  autogen.sh.svn-work  config.help.svn-work  config.in.svn-work  configure.in.svn-work  pgmain.c.svn-work  pgserver-cvs-0.ebuild.svn-work  picogui-server.spec.in.svn-work  profile.defaults.svn-work  select.in.svn-work
server/appmgr/: Makefile.in  appmgr.c  managed_rootless.c  null.c  panel.c
server/appmgr/.svn/: dir-wcprops  entries
server/appmgr/.svn/wcprops/: Makefile.am.svn-work  appmgr.c.svn-work  managed_rootless.c.svn-work  null.c.svn-work  panel.c.svn-work
server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
server/configscript/: Configure  Makefile.in
server/configscript/.svn/: dir-wcprops  entries
server/configscript/.svn/wcprops/: Configure.svn-work  Makefile.am.svn-work  Menuconfig.svn-work  README.Menuconfig.svn-work  gentooconfig.py.svn-work  gentooconfig_deps.py.svn-work
server/configscript/lxdialog/: Makefile.in
server/configscript/lxdialog/.svn/: dir-wcprops  entries
server/debug/: Makefile.in  benchmark.c  videotest.c
server/debug/.svn/: dir-wcprops  entries
server/etc/.svn/: dir-wcprops  entries
server/font/: Makefile.in  bdf_fonts.c  fixed13ja.bdf
server/font/.svn/: dir-wcprops  entries
server/formats/: Makefile.in  bmp.c  gif.c  html.c  jpeg.c  plaintext.c  png.c  pnm.c
server/formats/.svn/: dir-wcprops  entries
server/gcore/: Makefile.in  configfile.c  div.c  driverinfo.c  errortext.c  g_error.c  g_malloc.c  globals.c  grop.c  handle.c  init.c  pgstring.c  render.c  requests.c  timer.c
server/gcore/.svn/: dir-wcprops  entries
server/include/: Makefile.in
server/include/.svn/: dir-wcprops  entries
server/include/pgserver/: .config-is-not.15757  .config-is-not.19103  .config-is-not.24974  .config-is-not.6108  Makefile.in  appmgr.h  common.h  configfile.h  divtree.h  font.h  font_bdf.h  g_error.h  g_malloc.h  gl.h  handle.h  hotspot.h  init.h  input.h  llist.h  os.h  os_posix.h  paragraph.h  pgnet.h  pgstring.h  render.h  requests.h  svrtheme.h  svrwt.h  terminal.h  textbox.h  textedit.h  timer.h  types.h  video.h  widget.h  x11.h
server/include/picogui/: Makefile.in  canvas.h  constants.h  network.h  opengl.h  pgkeys.h  theme.h  types.h  version.h  wt.h
server/input/: Makefile.in  adc7843.c  btkey.c  chipslicets.c  cursor.c  ericsson_cb.c  eventbroker.c  gpm.c  h3600ts.c  if_client_adaptor.c  if_hotspot.c  if_key_alpha.c  if_key_dispatch.c  if_key_preprocess.c  if_magic.c  if_pntr_dispatch.c  if_pntr_normalize.c  if_pntr_preprocess.c  if_touchscreen.c  input_drivers.c  input_filters.c  input_util.c  jsdev.c  mgl2input.c  ncursesinput.c  palmaxts.c  ps2mouse.c  r3912ts.c  rawttykb.c  remorakb.c  rrts.c  sc3ts.c  sdlinput.c  serialmouse.c  svgainput.c  vncinput.c  vr3ts.c  x11input.c  zaurus.c
server/input/.svn/: dir-wcprops  entries
server/log/.svn/: dir-wcprops  entries
server/macros/: beemodule.m4  crosspgui.m4
server/macros/.svn/: dir-wcprops  entries
server/net/: Makefile.in  eventq.c  mainloop.c  request.c
server/net/.svn/: dir-wcprops  entries
server/os/: Makefile.am  Makefile.in  posix.c  posix_commandline.c  posix_signals.c  uclinux.c
server/os/.svn/: dir-wcprops  entries
server/pic/.svn/: dir-wcprops  entries
server/profiles/: Makefile.in
server/profiles/.svn/: dir-wcprops  entries
server/script/: fontdef.pl  pnm_embed.pl
server/script/.svn/: dir-wcprops  entries
server/skin/.svn/: dir-wcprops  entries
server/theme/: Makefile.in  crc32.c  fillstyle.c  memtheme.c  wt.c
server/theme/.svn/: dir-wcprops  entries
server/vidbase/: Makefile.am  Makefile.in  dvbl_bitmap.c  dvbl_color.c  dvbl_dither.c  dvbl_effects.c  dvbl_font.c  dvbl_init.c  dvbl_lgop.c  dvbl_primitives.c  dvbl_primitives_aa.c  dvbl_sprite.c  font_base.c  font_bdf.c  font_freetype.c  font_ftgl.c  font_textmode.c  font_xft.c  gl_bitmap.c  gl_camera.c  gl_grop.c  gl_init.c  gl_primitives.c  gl_util.c  linear1.c  linear16.c  linear2.c  linear24.c  linear32.c  linear4.c  linear8.c  slowvbl.c  vgaplan4.c  yuv.h  yuv16_422_planar.c
server/vidbase/.svn/: dir-wcprops  entries
server/video/: Makefile.am  Makefile.in  ez328.c  ez328vga.c  fbdev.c  glcontext.c  mgl2fb.c  ncurses.c  null.c  nullfb.c  s1d13806.c  scrshot.c  sdlfb.c  sdlgl.c  sed133x.c  serial40x4.c  svgafb.c  video_drivers.c  vncserver.c  x11_bitmap.c  x11_init.c  x11_primitives.c  x11_window.c
server/video/.svn/: dir-wcprops  entries
server/video/libvncserver/: Makefile  Makefile.in
server/vidwrap/: Makefile.in  rotate180.c  rotate270.c  rotate90.c
server/vidwrap/.svn/: dir-wcprops  entries
server/widget/: Makefile.am  Makefile.in  background.c  box.c  button.c  canvas.c  checkbox.c  dialogbox.c  field.c  flatbutton.c  indicator.c  label.c  listitem.c  managedwindow.c  menuitem.c  messagedialog.c  panel.c  panelbar.c  pgstr_textbuffers.c  popup.c  radiobutton.c  scroll.c  scrollbox.c  simplemenu.c  submenuitem.c  tabpage.c  terminal_frontend.c  terminal_textgrid.c  terminal_vt102.c  textbox_document.c  textbox_frontend.c  textbox_paragraph.c  textedit_frontend.c  textedit_llist.c  textedit_logical.c  toolbar.c  widget.c  widget_table.c
server/widget/.svn/: dir-wcprops  entries
(+2511 files in other folders)
